--- a/app/assets/app.css
+++ b/app/assets/app.css
@@ -8,6 +8,48 @@ html, body {
   background-color: #EEEEEE !important;
 }
 
+header {
+  background-image: url(img/banner_principal.png);
+  background-size: cover;
+  background-position: top center;
+  height: 100%;
+}
+
+.icon10 {
+  width: 150px;
+  height: 150px;
+}
+
+.tam-1, .tam-2, .tam-3{
+ font-family: inherit;
+  font-weight: 500;
+  line-height: 1.1;
+  color: inherit;
+} 
+
+.tam-3{
+  font-size: 24px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+@media(max-width: 724px) {
+  header {
+  background-image: url(img/banner_principal_responsivo.png);
+  }
+
+  .tam-3{
+    font-size: 18px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .icon10 {
+    width: 90px;
+    height: 90px;
+  }
+}
+
 /* Toolbar area */
 
 .menu {
@@ -17,6 +59,7 @@ html, body {
   margin: 16px;
   width: 36px;
 }
+
 
 
 md-toolbar h3 {
@@ -116,12 +159,29 @@ span.name {
 }
 
 /************* Meus Estilos personalizados********************/
-.label-perguntas{
-  color: #4FB3EC;
-  font-weight: bold;
+
+.principal-banner {
+  color: #FFF;
+  background-color: rgba(0, 0, 0, .5);
+  padding: 20px;
+  width: 80%;
+  border-radius: 5px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: .3s;
 }
 
-.label-informacao{
-  color: #6b6a6a;
-  font-weight: bold;
+@media(min-width: 992px) {
+  .principal-banner {
+    left: 0;
+    transform: translate(0, -80%);
+    width: 70%;
+  }
+
+  .principal-bannerWrapper {
+    position: relative;
+    height: 100%;
+  }
 }
