--- a/app/assets/app.css
+++ b/app/assets/app.css
@@ -15,11 +15,9 @@ header {
   height: 100%;
 }
 
-#praQueFiador {
-  background-image: url(img/banner_principal.png);
+#tituloCaptalizacao{
+  background-image: url(img/banner_captalizacao.png);
   background-size: cover;
-  background-position: top center;
-  height: 100%;
 }
 
 .icon10 {
@@ -32,7 +30,11 @@ header {
   height: 90px;
 }
 
-.tam-1, .tam-2, .tam-3{
+.text-white{
+  color: #ffffff !important;
+}
+
+.tam-1, .tam-2, .tam-3, .tam-4{
  font-family: inherit;
   font-weight: 500;
   line-height: 1.1;
@@ -51,7 +53,11 @@ header {
   background-image: url(img/banner_principal_responsivo.png);
   }
 
-  .md-display-2 {
+  #img_din{
+    max-width: 100%;
+  }
+
+.md-display-2 {
     font-size: 34px;
     font-weight: 400;
     line-height: 40px;
@@ -216,4 +222,9 @@ span.name {
     position: relative;
     height: 100%;
   }
+
+  #praQueFiador {
+  background-image: url(img/banner_fiador.png);
+  background-size: cover;
+}
 }
