--- a/app/assets/app.css
+++ b/app/assets/app.css
@@ -15,6 +15,13 @@ header {
   height: 100%;
 }
 
+footer {
+  background-image: url(img/banner_footer.png);
+  background-size: cover;
+  background-position: top center;
+  height: 15%;
+}
+
 .borda{
   border: solid 4px;
   border-radius: 19px;
@@ -33,6 +40,15 @@ header {
 #seguroFianca{
   background-image: url(img/banner_seguro_fianca.png);
   background-size: cover;
+}
+
+#alugueEm3Passos{
+  /*background-color: #e9eceb;*/
+  background: red; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(to right, #d6d5d5 , #f7f7f7, #d6d5d5); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(to right, #d6d5d5 , #f7f7f7, #d6d5d5); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(to right, #d6d5d5 , #f7f7f7, #d6d5d5); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to right, #d6d5d5 , #f7f7f7, #d6d5d5);/* Standard syntax */
 }
 
 .icon10 {
@@ -55,6 +71,12 @@ header {
   line-height: 1.1;
   color: inherit;
   font-weight: bold;
+}
+
+.tam-2{
+  font-size: 44px;
+  margin-top: 20px;
+  margin-bottom: 10px;
 } 
 
 .tam-3{
@@ -84,21 +106,27 @@ header {
     line-height: 64px;
 }
 
-  .tam-3{
-    font-size: 18px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
+.tam-2{
+  font-size: 28px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+} 
 
-  .icon10 {
-    width: 90px;
-    height: 90px;
-  }
+.tam-3{
+  font-size: 18px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
 
-  .icon5 {
-  width: 50px;
-  height: 50px;
-  }
+.icon10 {
+  width: 90px;
+  height: 90px;
+}
+
+.icon5 {
+width: 50px;
+height: 50px;
+}
 
 }
 
@@ -230,7 +258,7 @@ span.name {
     left: 0;
     transform: translate(0, -80%);
     width: 50%;
-    top: 60%;
+    top: 70%;
   }
 
   .principal-bannerWrapper {
