--- a/app/assets/fontes/fonte.css
+++ b/app/assets/fontes/fonte.css
@@ -223,20 +223,7 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 }
 
-/*FONTES PERSONALIZADAS*/
 @font-face{
-  font-family: 'NeoSansStd-Ultra';
+  font-family: 'NeoSansStd';
   src : url(NeoSansStd-Ultra.otf);
 }
-
-@font-face{
-  font-family: 'NeoSansStd-Medium';
-  src : url(NeoSansStd-Medium.otf);
-}
-
-@font-face{
-  font-family: 'NeoSansStd-Regular';
-  src : url(NeoSansStd-Regular.otf);
-}
-
-
