--- a/app/assets/app.css
+++ b/app/assets/app.css
@@ -34,7 +34,7 @@ footer {
 }
 
 #imgFiadorNunca{
-    max-width: 80%;
+    max-width: 100%;
   }
 
 #tituloCaptalizacao{
@@ -90,11 +90,12 @@ footer {
 } 
 
 .tam-3{
-  font-size: 34px;
+  font-size: 25px;
   margin-top: 20px;
   margin-bottom: 10px;
 }
 
+/*para dispositivos com resolução até 1280px*/
 @media(max-width: 1280px) {
   header {
   background-image: url(img/banner_principal_responsivo.png);
@@ -102,10 +103,6 @@ footer {
 
   #img_din{
     max-width: 100%;
-  }
-
-  #imgFiadorNunca{
-    max-width: 50%;
   }
 
   .md-display-2 {
@@ -125,6 +122,15 @@ footer {
     margin-top: 10px;
     margin-bottom: 10px;
   } 
+   
+
+}
+
+/*para dispositivos com resolução até 500px*/
+@media(max-width: 500px) {
+  #imgFiadorNunca{
+    max-width: 50%;
+  }
 
   .tam-3{
     font-size: 18px;
@@ -141,7 +147,6 @@ footer {
   width: 50px;
   height: 50px;
   }
-
 }
 
 .principal-banner {
@@ -157,11 +162,12 @@ footer {
   transition: .3s;
 }
 
+/*para dispositivos com resolução de no mínimo 992px*/
 @media(min-width: 992px) {
   .principal-banner {
     left: 0;
     transform: translate(0, -80%);
-    width: 50%;
+    width: 60%;
     top: 70%;
   }
 
