--- a/app/assets/app.css
+++ b/app/assets/app.css
@@ -190,6 +190,17 @@ footer {
   
 }
 
+/*----------Back to Top Button -----------*/
+
+.btn-go-top {
+   display: none;
+   position: fixed;
+   bottom: .5em;
+   right: .5em;
+   padding: .5em;
+   background-color: rgb(125, 137, 202) !important;
+}
+
 /*Estilos de Fonts*/
 .neoSansMedium{
   font-family: 'NeoSansStd-Medium';
