--- a/app/src/view/seguroFianca.html
+++ b/app/src/view/seguroFianca.html
@@ -1,26 +1,26 @@
 <div layout="row" layout-xs="column" layout-align="center start" layout-padding>
     <div flex="35" flex-xs="100" style="text-align: center;" flex-order-gt-md="3">
-        <md-icon md-svg-src="./assets/svg/key-white.svg" class="icon10" aria-label="Android "> </md-icon>
-        <p class="tam-2 text-white"> seguro fiança</p>
-        <p class="tam-3 text-left text-white borda" style="text-align: left;">
+        <img src="./assets/img/key-white.png" class="icon10">
+        <p class="tam-2 text-white"><strong> seguro fiança </strong></p>
+        <p class="tam-3 text-left text-white borda impact" style="text-align: left;">
             Com o Seguro Fiança, seu fiador é a própria seguradora em todos os aspectos da locação, como aluguéis, IPTU, condomínio, água, luz e demais despesas de sua obrigação no contrato de aluguel. Você contrata no momento de sua locação e pode pagar no cartão de crédito ou no boleto, e ainda conta com assistências e cobertuas exclusivas.</p>
     </div>
     <div flex="auto" layout="column" layout-lg="row" layout-gt-lg="row" layout-align="center center">
         <div flex="30" flex-xs="100" flex-order-gt-md="2">
-            <md-list>
-                <md-list-item class="tam-3 text-white">
+            <md-list class="tam-3 text-white impact">
+                <md-list-item>
                     <span class="glyphicon glyphicon-ok"></span>pagamento parcelado
                 </md-list-item>
-                <md-list-item class="tam-3 text-white">
+                <md-list-item>
                     <span class="glyphicon glyphicon-ok"></span>contrato 100% garantido
                 </md-list-item>
-                <md-list-item class="tam-3 text-white">
+                <md-list-item>
                     <span class="glyphicon glyphicon-ok"></span>sem necessidade de fiador
                 </md-list-item>
-                <md-list-item class="tam-3 text-white">
+                <md-list-item>
                     <span class="glyphicon glyphicon-ok"></span>assistência 24 horas
                 </md-list-item>
-                <md-list-item class="tam-3 text-white">
+                <md-list-item>
                     <span class="glyphicon glyphicon-ok"></span>coberturas exclusivas
                 </md-list-item>
             </md-list>
