--- a/app/src/view/tituloCaptalizacao.html
+++ b/app/src/view/tituloCaptalizacao.html
@@ -1,26 +1,26 @@
 <div layout="row" layout-xs="column" layout-align="center start" layout-padding>
     <div flex="35" flex-xs="100" style="text-align: center;">
-        <md-icon md-svg-src="./assets/svg/padlock-white.svg" class="icon10" aria-label="Android "> </md-icon>
-        <p class="tam-2 text-white"> titulo de captalização</p>
-        <p class="tam-3 text-left text-white borda" style="text-align: left;">
+        <img src="./assets/img/padlock-white.png" class="icon10">
+        <p class="tam-2 text-white"> <strong> titulo de captalização </strong></p>
+        <p class="tam-3 text-left text-white borda impact" style="text-align: left;">
             Ideal para quem quer alugar imóveis comerciais e residenciais. Não há a necessidade de análise de crédito, com processo rápido e sem burocracia. Você realiza a contratação do Título de Capitalização no momento da assinatura do seu contrato de aluguel, e ao final do período de permanência, você recebe todo o dinheiro de volta e corrigido pela TR.</p>
     </div>
     <div flex="auto" layout="column" layout-lg="row" layout-gt-lg="row" layout-align="center center">
         <div flex="30" flex-xs="100">
-            <md-list>
-                <md-list-item class="tam-3 text-white">
+            <md-list class="tam-3 text-white impact">
+                <md-list-item>
                     <span class="glyphicon glyphicon-ok"></span>sem burocracia
                 </md-list-item>
-                <md-list-item class="tam-3 text-white">
+                <md-list-item>
                     <span class="glyphicon glyphicon-ok"></span>sem análise de crédito
                 </md-list-item>
-                <md-list-item class="tam-3 text-white">
+                <md-list-item>
                     <span class="glyphicon glyphicon-ok"></span>sem comprovante de renda
                 </md-list-item>
-                <md-list-item class="tam-3 text-white">
+                <md-list-item>
                     <span class="glyphicon glyphicon-ok"></span>processo rápido
                 </md-list-item>
-                <md-list-item class="tam-3 text-white">
+                <md-list-item>
                     <span class="glyphicon glyphicon-ok"></span>resgate de 100% do valor,
                     <br/> corrigido pela TR.
                 </md-list-item>
