--- a/app/src/view/alugueEm3Passos.html
+++ b/app/src/view/alugueEm3Passos.html
@@ -19,7 +19,7 @@
 </div>
 <div layout="row" layout-align="center center" layout-padding>
     <div flex="60" flex-xs="100">
-        <p class="tam-3 text-center impact">Sua locação muito mais fácil e sem burocracia. Você precisa apenas escolher o imóvel, enviar seus documentos e assinar seu contrato de aluguel. E o melhor de tudo, sem pedir favor a ninguém e com toda garantia e segurança.</p>
+        <p class="tam-3 text-center impact">Sua locação muito mais fácil e sem burocracia. Você precisa apenas escolher o imóvel, enviar seus documentos para análise de cadastro e assinar seu contrato de aluguel. E o melhor de tudo, sem pedir favor a ninguém e com toda garantia e segurança.</p>
     </div>
 </div>
 <div layout="row" layout-align="center center" layout-padding>
