--- a/app/src/view/praQueFiador.html
+++ b/app/src/view/praQueFiador.html
@@ -6,7 +6,7 @@
         <img src="./assets/img/logo.png" class="img-responsive">
     </div>
     <div flex="60" flex-xs="100" layout-padding>
-        <h1 class="md-display-3 impact" style="text-align: center;"><u>Pra que fiador ?</u></h1>
+        <h1 class="md-display-3 impact" style="text-align: center;"><u>Pra que fiador?</u></h1>
         <p class="tam-3 impact" style="text-align: center;">Imagine alugar um imóvel sem pedir para ninguém ser seu fiador? A Maximiza Corretora de Seguros tem a solução ideal para você que deseja alugar sem precisar de fiadores, com muita agilidade e pouca burocracia, onde você irá se preocupar somente com a sua mudança!</p>
     </div>
     <div flex="10" hide-xs style="padding-top: 7%">
@@ -17,7 +17,7 @@
     <div layout="row" layout-align="center center">
         <div flex="50" style="text-align: center;">
             <img src="./assets/img/padlock.png" class="icon5">
-            <p class="tam-3 neoSansMedium"> titulo de captalização</p>
+            <p class="tam-3 neoSansMedium"> título de capitalização</p>
         </div>
         <div flex="50" style="text-align: center;">
             <img src="./assets/img/key.png" class="icon5">
