--- a/app/src/view/tituloCaptalizacao.html
+++ b/app/src/view/tituloCaptalizacao.html
@@ -1,7 +1,7 @@
 <div layout="row" layout-xs="column" layout-align="center start" layout-padding>
     <div flex="35" flex-xs="100" style="text-align: center;">
         <img src="./assets/img/padlock-white.png" class="icon10">
-        <p class="tam-2 text-white"> <strong> titulo de captalização </strong></p>
+        <p class="tam-2 text-white"> <strong> título de capitalização </strong></p>
         <p class="tam-3 text-left text-white borda impact" style="text-align: left;">
             Ideal para quem quer alugar imóveis comerciais e residenciais. Não há a necessidade de análise de crédito, com processo rápido e sem burocracia. Você realiza a contratação do Título de Capitalização no momento da assinatura do seu contrato de aluguel, e ao final do período de permanência, você recebe todo o dinheiro de volta e corrigido pela TR.</p>
     </div>
@@ -19,6 +19,9 @@
                 </md-list-item>
                 <md-list-item>
                     <span class="glyphicon glyphicon-ok"></span>processo rápido
+                </md-list-item>
+                <md-list-item>
+                    <span class="glyphicon glyphicon-ok"></span>sorteios mensais
                 </md-list-item>
                 <md-list-item>
                     <span class="glyphicon glyphicon-ok"></span>resgate de 100% do valor,
