--- a/app/src/view/praQueFiador.html
+++ b/app/src/view/praQueFiador.html
@@ -16,11 +16,15 @@
 <div class="container">
     <div layout="row" layout-align="center center">
         <div flex="50" style="text-align: center;">
+        <a ng-click="goTo('tituloCaptalizacao')" role="button">
             <img src="./assets/img/padlock.png" class="icon5">
+        </a>
             <p class="tam-3 neoSansMedium"> título de capitalização</p>
         </div>
         <div flex="50" style="text-align: center;">
+         <a ng-click="goTo('seguroFianca')" role="button">
             <img src="./assets/img/key.png" class="icon5">
+        </a>
             <p class="tam-3 neoSansMedium"> seguro fiança</p>
         </div>
     </div>
