--- a/app/src/view/formulario/dadosPretendente.html
+++ b/app/src/view/formulario/dadosPretendente.html
@@ -1,7 +1,7 @@
  <div layout="row" layout-padding>
    <md-input-container class="md-block" flex="50">
       <label for="nome">Nome</label>
-      <input type="text" id="nome" upper name="nome" 
+      <input type="text" id="nome" upper name="nome" focus
       ng-model="cadastro.pretendente.nome" ng-tabindex="1">
     </md-input-container>
   
